k8s/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docuflow
  labels:
    name: docuflow
    environment: production
